--- a/hello-world-js.html
+++ b/hello-world-js.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang en-US>
+<html lang="en-US">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Hello World in JS</title>
         <script src="scripts/main.js.js" defer></script>
     </head>
